# Sources/FountainOps/Generated/Server/llm-gateway/Models.swift
@@ -2,8 +2,8 @@
 
 public struct ChatRequest: Codable {
     public let function_call: String
-    public let functions: String
-    public let messages: String
+    public let functions: [FunctionObject]
+    public let messages: [MessageObject]
     public let model: String
 }
 
@@ -17,7 +17,7 @@ public struct FunctionObject: Codable {
 }
 
 public struct HTTPValidationError: Codable {
-    public let detail: String
+    public let detail: [ValidationError]
 }
 
 public struct MessageObject: Codable {
@@ -25,11 +25,25 @@ public struct MessageObject: Codable {
     public let role: String
 }
 
+public struct SecurityCheckRequest: Codable {
+    public let resources: [String]
+    public let summary: String
+    public let user: String
+}
+
+public struct SecurityDecision: Codable {
+    public let decision: String
+}
+
 public struct ValidationError: Codable {
-    public let loc: String
+    public let loc: [String]
     public let msg: String
     public let type: String
 }
 
+public typealias metrics_metrics_getResponse = [String: String]
 
-© 2025 Contexter alias Benedikt Eickhoff 🛡️ All rights reserved.
+public typealias chatWithObjectiveResponse = [String: String]
+
+
+// © 2025 Contexter alias Benedikt Eickhoff 🛡️ All rights reserved.
